Fixes Header Spacing

--- a/src/App.css
+++ b/src/App.css
@@ -63,21 +63,21 @@ a {
 
 .right-side-links {
   display: flex;
-  align-items: center;
-  padding: 0 10px 0 0; 
+  /* align-items: center; */
+  padding: 0 5px 0 0; 
 }
 
 .gitlink,.linkedin-link {
-  margin: 5px;
-  font-size: 2rem;
+  margin: 2px;
+  font-size: 2.5rem;
   z-index: 1;
   color: rgb(110, 135, 154);
 }
 
 .gitlink:hover,
 .linkedin-link:hover {
-  margin: 5px;
-  font-size: 2rem;
+  margin: 2px;
+  font-size: 2.5rem;
   z-index: 1;
   color: rgb(255, 115, 0);
 }
@@ -119,6 +119,13 @@ a {
   }
 }
 
+@media (min-width: 760px) {
+  .movie-container {
+    margin-top: 50px;
+  }
+}
+
+
 @media (min-width: 800px) {
   .movie-container {
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
@@ -149,7 +156,7 @@ a {
   grid-gap: 5px;
   width: 100%;
   height: 50px;
-  margin-bottom: 5px;
+  margin: 5px 0 5px 0;
 }
 
 @media (min-width: 800px) {
@@ -168,7 +175,7 @@ a {
   margin: 1px;
   padding: 7px;
   opacity: 0.8;
-  font-size: 1.6rem;
+  font-size: 1.4rem;
   text-transform: uppercase;
   border-color: rgb(49, 49, 49);
   border-width: 2px;
